[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bonded-subsat-channel"
version = "0.3.0"
description = "Bonded sub-satoshi channels for BSV (post-Genesis) reference implementation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "prof-faustus"}]
keywords = ["bitcoin", "bsv", "payment-channels", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "bitcoinX>=0.9",
]

[project.urls]
Homepage = "https://github.com/prof-faustus/bonded-subsat-channel"
Source = "https://github.com/prof-faustus/bonded-subsat-channel"

[project.optional-dependencies]
test = ["pytest>=8", "hypothesis>=6", "mypy>=1.8", "pytest-cov>=4"]
lint = ["bandit>=1.7"]

[project.scripts]
channel = "channel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: large-scale tests (e.g. 9000-party scale)",
]
